--- a/src/app/department/list/departments.component.html
+++ b/src/app/department/list/departments.component.html
@@ -22,13 +22,14 @@
         </div>
         <div class="ml-7">
           <button mat-raised-button color="primary" (click)="add()">
-            Create designation
+            Create department
           </button>
         </div>
       </div>
+      <no-data-found *ngIf="!list.length"></no-data-found>
 
-      <div style="margin: 15px" class="example-container">
-        <table mat-table [dataSource]="list" class="mat-elevation-z8">
+      <div style="margin: 15px" class="example-container" *ngIf="list.length">
+        <table mat-table [dataSource]="list" class="mat-elevation-z8  table-auto">
           <ng-container matColumnDef="departmentId">
             <th mat-header-cell *matHeaderCellDef>Id</th>
             <td mat-cell *matCellDef="let element">
