--- a/src/app/designation/list/designation.component.html
+++ b/src/app/designation/list/designation.component.html
@@ -27,7 +27,10 @@
           </button>
         </div>
       </div>
-      <div style="margin: 15px" class="example-container">
+
+      <no-data-found *ngIf="!designationList.length"></no-data-found>
+
+      <div style="margin: 15px" class="example-container" *ngIf="designationList.length">
         <table
           mat-table
           [dataSource]="designationList"
