--- a/src/app/financial-year/list/list.component.html
+++ b/src/app/financial-year/list/list.component.html
@@ -27,7 +27,10 @@
             </button>
           </div>
         </div>
-        <div style="margin: 15px" class="example-container">
+
+      <no-data-found *ngIf="!financialYear.length"></no-data-found>
+
+        <div style="margin: 15px" class="example-container" *ngIf="!financialYear.length">
           <table
             mat-table
             [dataSource]="financialYear"
