--- a/src/app/payroll/salary/listgrade/listgrade.component.html
+++ b/src/app/payroll/salary/listgrade/listgrade.component.html
@@ -33,26 +33,28 @@
   
         <div
           style="margin: 15px"
-          class="example-container"
+          class="container-table "
         >
           <table mat-table [dataSource]="gradeList" class="mat-elevation-z8">
             <ng-container matColumnDef="grade">
               <th mat-header-cell *matHeaderCellDef>Grade</th>
               <td mat-cell *matCellDef="let element">
-                <!-- {{ element.departmentId }} -->
+                {{ element.grade }}
               </td>
             </ng-container>
   
             <ng-container matColumnDef="from">
               <th mat-header-cell *matHeaderCellDef>From</th>
               <td mat-cell *matCellDef="let element">
-                <!-- {{ element.branchName | titlecase }} -->
+                {{ element.from  }}
               </td>
             </ng-container>
   
             <ng-container matColumnDef="to">
               <th mat-header-cell *matHeaderCellDef>To</th>
               <td mat-cell *matCellDef="let element">
+                {{ element.to  }}
+
               </td>
             </ng-container>
   
@@ -88,16 +90,7 @@
             ></tr>
           </table>
         </div>
-        <!-- <div class="flex justify-center ml-3 mt-3 mb-3 mr-3">
-          <button
-            mat-raised-button
-            color="primary"
-            (click)="loadMore()"
-            *ngIf="branchList.length && count > branchList.length"
-          >
-            Load more
-          </button>
-        </div> -->
+        
       </div>
     </div>
   </div>
