--- a/src/app/designation/add/designationadd.component.html
+++ b/src/app/designation/add/designationadd.component.html
@@ -18,7 +18,7 @@
                   </div>
                 </div>
                 <div class="w-1/12 mx-8">
-                    <button mat-raised-button color="primary"  [disabled]="!designation.valid" (click)="submit()">Submit</button>
+                    <button mat-raised-button color="primary"  [disabled]="!designation.valid" (click)="action()">Submit</button>
                   </div>
               </div>
           </form>
