--- a/src/app/payroll/salary/addgrade/addgrade.component.scss
+++ b/src/app/payroll/salary/addgrade/addgrade.component.scss
@@ -5,12 +5,11 @@
    
     mat-icon{
         border-radius: 20px;
-        
-        // height: 18px;
-    // width: 20px;
     color: aliceblue;
-    font-size:24px;
+    font-size:19px;
     font-weight:400;
+    height: 19px;
+    width:19px;
     }
    
 }
