--- a/src/app/settings/settings/settings.component.html
+++ b/src/app/settings/settings/settings.component.html
@@ -4,7 +4,6 @@
       [isBack]="true"
       [title]="'Settting'"
     ></app-content-navbar>
-{{data | json}}
     <!-- card design -->
     <div class="min-h-screen bg-gray-100 my-3">
       <mat-card class="p-6 bg-white px-2 mx-3 my-3">
@@ -18,16 +17,16 @@
                     type="file"
                     #logoUpload
                     accept=".jpeg,.jpg,.png"
-                    (change)="onFileChange($event)"
+                    (input)="onFileChange($event)"
                   />
 
                   <div class="relative m-auto">
-                    <img *ngIf="!data.imageUrl" 
+                    <img *ngIf="!data?.imageUrl" 
                     src="assets/images/setting-logo.jpg"
                       alt="logo"
                       class="w-48 "
                     />
-                    <img style="object-fit: cover;" *ngIf="data.imageUrl"  src="{{data.imageUrl}}" alt="" class="w-48 h-48" />
+                    <img style="object-fit: cover;" *ngIf="data?.imageUrl"  src="{{data?.imageUrl}}" alt="" class="w-48 h-48" />
                     <span
                       mat-button
                       color="primary"
@@ -67,6 +66,14 @@
                       formControlName="brandFooter"
                     />
                   </mat-form-field>
+                  <mat-form-field class="example-full-width">
+                    <mat-label>Week off days</mat-label>
+                  <mat-select [(value)]="selected"  name="days" formControlName="weekOff" multiple>
+                    <mat-option *ngFor="let day of days" [value]="day.value">
+                      {{day.label}}
+                    </mat-option>
+                  </mat-select>
+                  </mat-form-field>
                 </div>
               </div>
             </div>
@@ -82,4 +89,3 @@
   </div>
 </div>
 
-<!-- class="absolute top-0 z-10 h-full w-full cursor-pointer opacity-0" -->
