--- a/src/app/shared/components/tabledata/tabledata.component.html
+++ b/src/app/shared/components/tabledata/tabledata.component.html
@@ -3,10 +3,9 @@
     <!-- Position Column -->
     <ng-container matColumnDef="profile_photo">
       <th mat-header-cell *matHeaderCellDef> </th>
-      <td mat-cell *matCellDef="let element" style="width: 100px;"> <img *ngIf="element?.profile_photo" src="{{element?.profile_photo}}" style=" width: 40px;
-        border-radius: 50%;">
-        <img *ngIf="!element?.profile_photo" src="assets/images/profile.jpg" style=" width: 40px;
-        border-radius: 50%;"></td>
+      <td mat-cell *matCellDef="let element" style="width: 100px;"> <img *ngIf="element?.profilePic"
+        src="{{element.profilePic.link}}" class="img-cell">
+        <img *ngIf="!element?.profilePic" src="assets/images/profile.jpg" class="img-cell"></td>
     </ng-container>
     <!-- <ng-container matColumnDef="empId">
       <th mat-header-cell *matHeaderCellDef> Emp Id. </th>
