--- a/src/app/holidays/list/list.component.html
+++ b/src/app/holidays/list/list.component.html
@@ -30,7 +30,7 @@
 
       <!-- <no-data-found *ngIf="!holidaysList.length"></no-data-found> -->
 
-        <div style="margin: 15px" class="example-container">
+        <div style="margin: 15px" class="holiday-container " >
           <table
             mat-table
             [dataSource]="holidaysList"
@@ -43,22 +43,22 @@
               </td>
             </ng-container>
             <ng-container matColumnDef="description">
-              <th mat-header-cell class="text-right"  *matHeaderCellDef>Description</th>
+              <th mat-header-cell  *matHeaderCellDef>Description</th>
               <td mat-cell *matCellDef="let element">
-                {{element.onThisDay}}
+                {{element.description}}
 
               </td>
             </ng-container>
             <ng-container matColumnDef="fromDate">
-              <th mat-header-cell class="text-right"  *matHeaderCellDef>From date</th>
+              <th mat-header-cell   *matHeaderCellDef>From date</th>
               <td mat-cell *matCellDef="let element">
-                {{element.onThisDay}}
+                {{element.fromDate | date: "shortDate" }}
               </td>
             </ng-container>
             <ng-container matColumnDef="toDate">
-              <th mat-header-cell class="text-right"  *matHeaderCellDef>To date</th>
+              <th mat-header-cell   *matHeaderCellDef>To date</th>
               <td mat-cell *matCellDef="let element">
-                {{element.onThisDay}}
+                {{element.toDate | date: "shortDate" }}
               </td>
             </ng-container>
             <ng-container matColumnDef="actions">
