--- a/src/app/layout/sidebarmenulist/sidebarmenulist.component.scss
+++ b/src/app/layout/sidebarmenulist/sidebarmenulist.component.scss
@@ -6,6 +6,7 @@
   height: 100%;
   display: block;
   overflow-x: hidden ;
+
 }
 
 .expand{
@@ -30,7 +31,7 @@
      padding: 8px;
   }
 }
-
+#sideMenu {
 .nav-list{
   // height: 100%;
   padding: 0;
@@ -107,7 +108,7 @@ height: 48px;
 border-radius: 0px;
 }
 .mat-nav-list .mat-list-item{
-padding: 0px 0px 0px 18px;
+padding: 0px 0px 0px 0px;
 }
 
 .mat-list-option:hover, .mat-list-option:focus, .mat-nav-list .mat-list-item:hover, .mat-nav-list .mat-list-item:focus, .mat-action-list .mat-list-item:hover, .mat-action-list .mat-list-item:focus{
@@ -115,8 +116,7 @@ background: #3f51b5;
 color: #fff !important;
 }
 .mat-expansion-panel-header.mat-expanded:focus, .mat-expansion-panel-header.mat-expanded:hover{
-background: #3f51b5;
-color: #fff !important;
+color: #fff;
 }
 .mat-expansion-panel .mat-expansion-panel-header.cdk-keyboard-focused:not([aria-disabled=true]), .mat-expansion-panel .mat-expansion-panel-header.cdk-program-focused:not([aria-disabled=true]), .mat-expansion-panel:not(.mat-expanded) .mat-expansion-panel-header:hover:not([aria-disabled=true]){
 background: #3f51b5;
@@ -128,7 +128,7 @@ color: #fff !important;
 }
 
 .active-parent{
-color: #3f51b5 !important;
+color: #3f51b5;
 transition: all .3s ease-in-out;
 transform: scale(1.03);
 cursor: pointer;
@@ -143,4 +143,5 @@ transition: all .3s ease-in-out;
 transform: scale(1.03);
 cursor: pointer;
 
+}
 }
