--- a/src/app/shared/components/tabledata/tabledata.component.html
+++ b/src/app/shared/components/tabledata/tabledata.component.html
@@ -28,7 +28,7 @@
     <!-- Symbol Column -->
     <ng-container matColumnDef="designation">
       <th mat-header-cell *matHeaderCellDef> Designation </th>
-      <td mat-cell *matCellDef="let element"> {{element.designation | titlecase}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.designationName | titlecase}} </td>
     </ng-container>
     <ng-container matColumnDef="department">
       <th mat-header-cell *matHeaderCellDef> Department </th>
